@@ -18,12 +18,19 @@
 {
   background-color: #f00;
   background-image: url( ../../img/ico/construction.png );
-  background-position: 10px 50%;
+  background-position: 10px 12px;
   color: #fff;
   font-weight: bold;
   margin-bottom: 20px;
   padding: 10px;
   padding-left: 35px;
+}
+
+#content #cloud #error .msg
+{
+  font-style: italic;
+  font-weight: normal;
+  margin-top: 10px;
 }
 
 #content #cloud #debug
